Fix filter collapse on small viewports
* All filter fields should collapse together when the browser is
  resized, at 240px.

--- a/app/assets/stylesheets/filters.scss
+++ b/app/assets/stylesheets/filters.scss
@@ -5,6 +5,10 @@
     font-weight: bold;
   }
 
+  > .btn-group, .input-group {
+    min-width: 240px;
+  }
+
   .glyphicon:nth-last-child(2) {
     margin-right: 0.5em;
   }
